--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "netlify-identity-widget": "^1.5.2",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -23,6 +24,8 @@
     "lint-staged": "^8.1.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "vue-cli-plugin-netlify-lambda": "^0.1.0",
+    "vue-cli-plugin-netlify-redirects": "^1.0.0",
     "vue-template-compiler": "^2.5.21"
   },
   "gitHooks": {
