--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve:functions": "netlify-lambda serve functions",
+    "build": "npm-run-all --parallel build:**",
+    "build:app": "vue-cli-service build",
+    "build:functions": "netlify-lambda build src/lambda",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "netlify-identity-widget": "^1.5.2",
-    "vue": "^2.5.21",
+    "vue": "^2.5.22",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -23,7 +26,9 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^8.1.0",
+    "netlify-lambda": "^1.3.1",
     "node-sass": "^4.9.0",
+    "npm-run-all": "^4.1.5",
     "sass-loader": "^7.0.1",
     "vue-cli-plugin-netlify-lambda": "^0.1.0",
     "vue-cli-plugin-netlify-redirects": "^1.0.0",
